# drf-api

./: README.md  pyproject.toml
blog/: settings.py
posts/: models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
